# NextBracket

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: daily-update.yml
calendars/configs/: slo-melee.yaml  slo-ultimate.yaml
calendars/feeds/: slo-melee.ics  slo-ultimate.ics
scripts/: generate_calendars.py
src/nextbracket/: __init__.py  api_client.py  calendar_generator.py  tournament_fetcher.py
