[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nextbracket"
version = "0.1.0"
description = "A tool for collecting tournament listings and producing calendar feeds"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "requests>=2.28.0",
    "matplotlib>=3.6.0",
    "plotly>=5.11.0",
    "python-dotenv>=0.19.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
